# algoliasearch-rs

./: Cargo.toml
.github/workflows/: ci.yaml
src/: error.rs
src/index/: mod.rs
