[package]
name = "algoliasearch"
version = "0.1.5"
authors = ["Nicolas Barbotte <nicolas@barbotte.net>"]
edition = "2021"
description = "Algolia client"
keywords = ["algolia", "client", "search"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/nicompte/algoliasearch-rs"
homepage = "https://github.com/nicompte/algoliasearch-rs"
documentation = "https://docs.rs/algoliasearch"
include = [
    "src/**/*",
    "Cargo.toml",
]

[dependencies]
derive_builder = "0.10.2"
futures = "0.3.17"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
serde_repr = "0.1.7"
serde_urlencoded = "0.7"
chrono = { version = "0.4.19", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.5", features = ["rt", "rt-multi-thread", "macros"] }
